--- a/src/main/webapp/WEB-INF/templates/ind1ex.html
+++ b/src/main/webapp/WEB-INF/templates/ind1ex.html
@@ -12,13 +12,15 @@
     <link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}"/>
     <link type="text/css" rel="stylesheet" th:href="@{/resources/css/main.css}"/>
 </head>
-
 <body>
 
 <div th:replace="~{navigation :: navi(Home)}" />
 
-<div class="container">
-    <h1>Добро пожаловать в бибилотеку</h1>
+
+
+<body class="container">
+
+    <h1>Привет, это библиотека</h1>
 
     <div sec:authorize="isAuthenticated()">
         Authenticated username:
@@ -27,7 +29,7 @@
         <div sec:authentication="principal.authorities"></div>
     </div>
 
-<!--    <div sec:authorize access="hasAnyRole('ADMIN', 'USER')">-->
+    <div sec:authorize access="hasAnyRole('ADMIN', 'USER')">
     <div sec:authorize="hasRole('ADMIN')">
         This content will only be visible to users who have the "supervisor" authority in their list of <tt>GrantedAuthority</tt>s.
     </div>
@@ -37,7 +39,6 @@
     <a href="/books/list">Show books list</a>
     <br>
     <a href="/books/add">Add new book</a>
-<!--    <button id="testBtn">Test</button>-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
